--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@mui/icons-material": "5.0.5",
     "@mui/material": "5.0.4",
     "@mui/styled-engine": "5.0.1",
+    "gsap": "^2.0.1",
     "material-style": "0.0.1",
     "mui-blox": "0.4.2",
     "mui-modal-provider": "1.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-page-transitions": "^1.2.0",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.0",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.2"
